--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             sizes="32x32"
             href="./images/favicon-32x32.png"
         />
+        <link rel="stylesheet" href="./styles.css" />
 
         <title>Frontend Mentor | Order summary card</title>
 
@@ -27,26 +28,30 @@
     </head>
     <body>
         <section>
+            <img
+                src="images/illustration-hero.svg"
+                alt="dancing girl"
+                class="illustration"
+            />
             <h1>Order Summary</h1>
             <p>
                 You can now listen to millions of songs, audiobooks, and
                 podcasts on any device anywhere you like!
             </p>
-            <div>
-                <div>Annual Plan</div>
-                <div>$59.99/year</div>
-                <button>Change</button>
+            <div class="pricing-container">
+                <img
+                    src="images/icon-music.svg"
+                    alt="music icon"
+                    class="music-icon"
+                />
+                <div class="price">
+                    <div class="annual-plan">Annual Plan</div>
+                    <div>$59.99/year</div>
+                </div>
+                <button class="change">Change</button>
             </div>
-            <button>Proceed to Payment</button>
-            <button>Cancel Order</button>
+            <button class="payment">Proceed to Payment</button>
+            <button class="cancel-order">Cancel Order</button>
         </section>
-        <div class="attribution">
-            Challenge by
-            <a
-                href="https://www.frontendmentor.io?ref=challenge"
-                target="_blank"
-                >Frontend Mentor</a
-            >. Coded by <a href="#">Tanmoy Das</a>.
-        </div>
     </body>
 </html>
