Add Desktop Background img & Fix price typography

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 />
                 <div class="price">
                     <div class="annual-plan">Annual Plan</div>
-                    <div>$59.99/year</div>
+                    <div class="currency">$59.99/year</div>
                 </div>
                 <button class="change">Change</button>
             </div>
